force-app/main/default/objects/Extole_Audience_Cfg__c/Extole_Audience_Cfg__c.object-meta.xml
<CustomObject>
    <label>Extole Audience Config</label>
    <nameField>
        <label>Config ID</label>
        <type>AutoNumber</type>
        <displayFormat>AC-{00000}</displayFormat>
    </nameField>
    <pluralLabel>Extole Audience Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>