force-app/main/default/objects/Extole_Audience_Cfg__c/fields/Extole_Audience_Id__c.field-meta.xml
<CustomField>
    <fullName>Extole_Audience_Id__c</fullName>
    <label>Extole Audience ID</label>
    <type>Text</type>
    <length>64</length>
</CustomField>