force-app/main/default/objects/Extole_Audience_Cfg__c/fields/Extole_Audience_Name__c.field-meta.xml
<CustomField>
    <fullName>Extole_Audience_Name__c</fullName>
    <label>Extole Audience Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>