force-app/main/default/objects/Extole_Audience_Cfg__c/fields/Identity_Column__c.field-meta.xml
<CustomField>
    <fullName>Identity_Column__c</fullName>
    <label>Identity Column</label>
    <description>API name of the report column that holds the member identity value (typically Email).</description>
    <type>Text</type>
    <length>255</length>
</CustomField>