force-app/main/default/objects/Extole_Audience_Cfg__c/fields/Last_Member_Count__c.field-meta.xml
<CustomField>
    <fullName>Last_Member_Count__c</fullName>
    <label>Last Member Count</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>