force-app/main/default/objects/Extole_Audience_Cfg__c/fields/Last_Operation_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Operation_Id__c</fullName>
    <label>Last Operation ID</label>
    <type>Text</type>
    <length>64</length>
</CustomField>