force-app/main/default/objects/Extole_Audience_Cfg__c/fields/Last_Operation_State__c.field-meta.xml
<CustomField>
    <fullName>Last_Operation_State__c</fullName>
    <label>Last Operation State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>PREPARING</fullName><default>false</default><label>PREPARING</label></value>
            <value><fullName>BUILDING</fullName><default>false</default><label>BUILDING</label></value>
            <value><fullName>VALIDATING</fullName><default>false</default><label>VALIDATING</label></value>
            <value><fullName>READY</fullName><default>false</default><label>READY</label></value>
            <value><fullName>FAILED</fullName><default>false</default><label>FAILED</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>