force-app/main/default/objects/Extole_Audience_Cfg__c/fields/Last_Sync_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_At__c</fullName>
    <label>Last Sync At</label>
    <type>DateTime</type>
</CustomField>