force-app/main/default/objects/Extole_Audience_Cfg__c/fields/Source_Report_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Report_Id__c</fullName>
    <label>Source Report ID</label>
    <type>Text</type>
    <length>18</length>
</CustomField>