force-app/main/default/objects/Extole_Audience_Cfg__c/fields/Source_Report_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Report_Name__c</fullName>
    <label>Source Report Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>